--- a/paper/references.bib
+++ b/paper/references.bib
@@ -12696,7 +12696,7 @@ and Metzger, M. and Moloney, J.M. and Morse, P.J. and Prislin, R. and Razza, T. 
   author       = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address      = {Vienna, Austria},
-  year         = {2019},
+  year         = {2022},
   url          = {https://www.R-project.org/},
 }
 @ARTICLE{RaaijmakersEtAl1999,
@@ -18554,4 +18554,39 @@ pages = {352--362}
   pages={127--144},
   year={2014},
   publisher={Taylor \& Francis}
+}
+
+@article{kucukelbir2017automatic,
+  title={Automatic differentiation variational inference},
+  author={Kucukelbir, Alp and Tran, Dustin and Ranganath, Rajesh and Gelman, Andrew and Blei, David M},
+  journal={Journal of machine learning research},
+  year={2017}
+}
+
+@Manual{cmdstanr,
+    title = {cmdstanr: R Interface to 'CmdStan'},
+    author = {Jonah Gabry and Rok Češnovar},
+    year = {2022},
+    note = {https://mc-stan.org/cmdstanr/, https://discourse.mc-stan.org},
+  }
+
+@article{tuente2021mapping,
+  title={Mapping aggressive behavior of forensic psychiatric inpatients with self-report and structured staff-monitoring},
+  author={Tuente, St{\'e}phanie Klein and Bogaerts, Stefan and Veling, Wim},
+  journal={Psychiatry research},
+  volume={301},
+  pages={113983},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{bousardt2016predicting,
+  title={Predicting inpatient aggression by self-reported impulsivity in forensic psychiatric patients},
+  author={Bousardt, Annelea MC and Hoogendoorn, Adriaan W and Noorthoorn, Eric O and Hummelen, Jacobus W and Nijman, Henk LI},
+  journal={Criminal behaviour and mental health},
+  volume={26},
+  number={3},
+  pages={161--173},
+  year={2016},
+  publisher={Wiley Online Library}
 }
