Updates from Overleaf

--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -364,7 +364,12 @@ This indicates that the IFTE has added value for prediction, but only if it is a
 
 \section{Interpretation of the LTM}
 
-
+\begin{figure}
+    \centering
+    \includesvg[width=\textwidth]{posterior_mean_95CRI}
+    \caption{Posterior means and 95\% credible intervals for the coefficients of the logistic regression model ($\CovariateBeta_{\Icovariate}$ and $\CovariateBeta_{\Iitem}$ in \autoref{model:Logistic_LTM}).}
+    \label{fig:my_label}
+\end{figure}
 
 \section{Discussion}
 Here we applied a Cultural Consensus Theory model to scores of patients in a Forensic Psychiatric Center.
