Updates from Overleaf

--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -91,7 +91,7 @@ Finally, we discuss some practical limitations of the data set at hand and how f
 
 
 \section{Mesdag Data}
-\DB{Edwin, het zou fijn zijn als jij naar deze sectie kan kijken!}
+\DB{Edwin, het zou fijn zijn als jij naar deze sectie kan kijken! Overigens bevat de dataset 23 items voor de IFBE, terwijl de literatuur er maar 22 beschrijft. Weet jij welk item er ontbreekt in de huidige beschrijving?}
 \subsection{Method of collection}
 The data were collected in the Dutch maximum-security Forensic Psychiatric Center Dr. S. van Mesdag in the period XXX to XXX.\DBB{April 2010 t/m juli 2016 gok ik gebaseerd op Schuringa et al. 2016.}
 The individual records were retrospectively merged into a single data set.
@@ -395,7 +395,7 @@ A key limitation of our approach here is that patients' violent behavior is not 
 This limits the direct applicability of our approach in practice.
 To accommodate time series data, the model could be be extended, for example, by adding autoregressive components.
 
-
+Furthermore, 
 
 The predictive comparison is possibly incomplete as  likely overfitting
 
