--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -363,6 +363,7 @@ The logistic regression model with only violence (LR-Violence) outperformed the 
 This indicates that the IFTE has added value for prediction, but only if it is analyzed properly.
 
 \section{Interpretation of the LTM}
+Now that we have shown that the LTM had adequate predictive performance, a next step is interpreting the model parameters.
 \autoref{fig:parameters} shows the posterior means and 95\% credible intervals for the LTM fitted to the complete data.
 Prior history of violence has the largest coefficients, whereas the other coefficients all appear close to zero.
 \begin{figure}[!ht]
