add covariate index to logistic regression graphical model

--- a/graphicalmodels/graphicalmodels.tex
+++ b/graphicalmodels/graphicalmodels.tex
@@ -829,7 +829,7 @@
 
 
 \node[obsD, right = of l, minimum width = 1cm]	                (y)	        {$v_{\Ipatient}$};
-\node[obsD, below = of y, minimum width = 1cm]	(zp)		{$\Covariate_{\Ipatient}$};
+\node[obsD, below = of y, minimum width = 1cm]	(zp)		{$\Covariate_{\Ipatient\Icovariate}$};
 
 \node[obsD, left = of E, minimum width = 1cm, xshift = .4cm]	(zr)		{$\Covariate_{\Irater}$};
 %\node[obsD, left = of E, double distance = 1pt, minimum width = 1cm] at ($(E)!0.5!(b)$)	(zr)		{$z_{\Irater}$};
