Updates from Overleaf

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18590,3 +18590,13 @@ pages = {352--362}
   year={2016},
   publisher={Wiley Online Library}
 }
+
+@article{schuringa2019inpatient,
+  title={Inpatient violence in forensic psychiatry: Does change in dynamic risk indicators of the IFTE help predict short term inpatient violence?},
+  author={Schuringa, Erwin and Spreen, Marinus and Bogaerts, Stefan},
+  journal={International journal of law and psychiatry},
+  volume={66},
+  pages={101448},
+  year={2019},
+  publisher={Elsevier}
+}
