--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -57,7 +57,8 @@
 
 \end{abstract}
 
-\section{Introduction}
+\section{Introduction} % Yes, this will be deleted before submission
+
 The mental health and forensic risk factors of patients in forensic psychiatric hospitals is regularly monitored with methods such as
 Routine Outcome Monitoring \parencite{deBeurs2011ROM}.
 A staff member (e.g., a clinician or psychiatrist), henceforth a \emph{rater}, scores a patient on variety of criteria, such as problematic behavior (e.g., hostility) or protective behavior (e.g., coping skills).
@@ -66,7 +67,7 @@ These scores are used to track the mental state of patients over time, to measur
 
 Typically, multiple raters score each patient on different items.
 Standard practice is to average the scores across raters and use the averages to inform decisions.
-However, this is suboptimal for multiple reasons \parencite{vandenBergh2020cultural}.
+However, this is suboptimal for multiple reasons. %\parencite{vandenBergh2020cultural}.
 For example, taking the average implies that raters are interchangeable and patients are independent, rather than taking into account raters' bias or patients' offense.
 % For example, this implies raters are exchangeable and patients are independent, rather than accounting for raters' biases or patients' criminal offense.
 
@@ -85,16 +86,19 @@ First, we briefly introduce the LTM model used and discuss two changes made comp
 Afterward, we use the LTM to augment a logistic regression.
 We use the augmented model to predict violent outbursts in patients and compare the predictive performance to that of frequently used machine learning models.
 We find that our LTM approach outperforms all other methods, albeit by a small margin.
-Next, we interpret the fitted model and ...
-% The paper is concluded with a discussion on how the data collection could be adjusted to maximize the benefit of our CCT-based approach.
+Next, we interpret the fitted model, which shows that prior history of violence is most predictive.
 Finally, we discuss some practical limitations of the data set at hand and how future monitoring of patients could be adjusted to maximize the added benefit of our CCT-based approach.
 
 
 \section{Mesdag Data}
-\DB{Edwin, het zou fijn zijn als jij naar deze sectie kan kijken! Overigens bevat de dataset 23 items voor de IFBE, terwijl de literatuur er maar 22 beschrijft. Weet jij welk item er ontbreekt in de huidige beschrijving?}
-\subsection{Method of collection}
+\DB{Erwin, het zou fijn zijn als jij naar deze sectie kan kijken! Daarnaast had ik nog een vraag. De scores zijn op een schaal van 0-17 (met -99 als missing). Andere artikelen beschrijven echter een 17 puntsschaal. Stelt de score 0 iets speciaals voor?}
+% \subsection{Method of collection}
 The data were collected in the Dutch maximum-security Forensic Psychiatric Center Dr. S. van Mesdag in the period XXX to XXX.\DBB{April 2010 t/m juli 2016 gok ik gebaseerd op Schuringa et al. 2016.}
-The individual records were retrospectively merged into a single data set.
+The individual records were retrospectively merged into a single data set. 
+In total, the data set contains information about 103 patients given by 188 raters on 23 items from 2 measurement occasions (18354 observations in total).
+In addition to the scores on the IFTE items, the data set contains several background variables about the patients.
+These are age (0-30, 31-40, 41-50, or 55+)\footnote{Ideally age is treated as a continuous variable. However, for privacy reasons, the data were made unidentifiable, for example by categorizing age.}, treatment duration (0-2 years, 2-4 years, 4-6 years, or 6+ years), diagnosis (autism spectrum disorder, personality disorder, personality disorder B, schizophrenia or other psychotic disorders, and As 1 overig), offence (manslaughter, aggravated assault, murder, arson, violent property crime, moderately violent property crime, and Sexual offence), violent behavior before measurement 1, and violent behavior in between measurements 1 and 2.
+\DB{Check de juiste engelse vertalingen.}
 
 \subsection{IFTE}
 The data were collected using a Routine Outcome Monitoring instrument called the the Instrument for Forensic Treatment Evaluation (IFTE).
@@ -102,27 +106,78 @@ The IFTE consists of 22 items, of which 14 items are criminogenic need indicator
 The 22 items can be grouped into three factors, Protective behaviors, Problematic behaviors, and Resocialization Skills.
 The individual items are shown in \autoref{tb:IFTE_items}.
 All items are scored on a 18 point scale.
+Before the IFTE is scored, the rater provides their clinical judgment to answer the question: ``Has the patient changed in this last period?'' on a 13 point scale.
+This last item is treated as the 23\textsuperscript{rd} item of the IFTE here.
+Each patient was scored with the IFTE on two separate occasions.
 
-\subsection{Covariates}
-In addition to the IFTE, several other background variables about the patients are considered for predicting violent behavior.
-These are age (0-30, 31-40, 41-50, or 55+), treatment duration (0-2 years, 2-4 years, 4-6 years, or 6+ years), diagnosis (Autism spectrum disorder, Personality disorder, Personality disorder B, Schizophrenia or other psychotic disorders, As 1 overig), offence (Manslaughter, Aggravated assault, Murder, Arson, Violent property crime, Moderately violent property crime, Sexual offence), violent behavior before measurement 1, and violent behavior in between measurements 1 and 2.
-\DB{Check de juiste engelse vertalingen.}
+% Based on: 
+% Before filling out the IFTE, the main clinician gives his/her clinical judgment whether he/she thinks the behavior of a patient has changed by answering the question: “Has the patient changed in this last period?” A 13-pointscale with four anchor points is used: 0 =“worsened,” 1 =“no change,” 2 =“a little improved” and 3 =“a lot improved.”
+
+% \subsection{Covariates}
+% In addition to the IFTE, several other background variables about the patients are available. %considered for predicting violent behavior.
+% These are age (0-30, 31-40, 41-50, or 55+), treatment duration (0-2 years, 2-4 years, 4-6 years, or 6+ years), diagnosis (autism spectrum disorder, personality disorder, personality disorder B, schizophrenia or other psychotic disorders, and As 1 overig), offence (manslaughter, aggravated assault, murder, arson, violent property crime, moderately violent property crime, and Sexual offence), violent behavior before measurement 1, and violent behavior in between measurements 1 and 2.
+% \DB{Check de juiste engelse vertalingen.}
 
 
 \subsection{Descriptives}
+Before introducing the models used and analyzing the data, we give a descriptive summary of the data.
+\autoref{tb:backgroundinfo} shows the background characteristics for non-violent and violent patients.
+
+\begin{table}[!ht]
+    \caption{Characteristics of the non-violent and violent patients.}
+    \label{tb:backgroundinfo}
+    \centering
+    \begin{tabular}{lrr}
+        \toprule
+                                                                    &  Non-violent & Violent \\
+        \midrule
+\textbf{History of violence}		  &&\\
+\hspace{3mm} Non-violent before T1 	 & 68 (84\%) & 6 (25\%) \\
+\hspace{3mm} Violent before T1 	 & 13 (16\%) & 18 (75\%) \\
+\hspace{3mm} Non-violent before T2 	 & 70 (85\%) & 5 (21\%) \\
+\hspace{3mm} Violent before T2 	 & 12 (15\%) & 19 (79\%) \\
+\textbf{Age}		  &&\\
+\hspace{3mm} 0-30 	 & 5 (6\%) & 5 (21\%) \\
+\hspace{3mm} 31-40 	 & 41 (50\%) & 14 (58\%) \\
+\hspace{3mm} 41-50 	 & 26 (32\%) & 2 (8\%) \\
+\hspace{3mm} 51+ 	 & 10 (12\%) & 3 (12\%) \\
+\textbf{Treatment duration}		  &&\\
+\hspace{3mm} 0-2 years 	 & 32 (39\%) & 13 (54\%) \\
+\hspace{3mm} 2-4 years 	 & 20 (24\%) & 4 (17\%) \\
+\hspace{3mm} 4-6 years 	 & 15 (18\%) & 0 (0\%) \\
+\hspace{3mm} 6+ years 	 & 15 (18\%) & 7 (29\%) \\
+\textbf{Diagnosis}		  &&\\
+\hspace{3mm} As 1 Other 	 & 12 (15\%) & 1 (4\%) \\
+\hspace{3mm} Autism spectrum disorder 	 & 14 (17\%) & 2 (8\%) \\
+\hspace{3mm} Personality disorder cluster B 	 & 14 (17\%) & 9 (38\%) \\
+\hspace{3mm} Personality disorder other 	 & 9 (11\%) & 3 (12\%) \\
+\hspace{3mm} Schizophrenia and other psychotic disorders 	 & 32 (40\%) & 9 (38\%) \\
+\textbf{Offense}		  &&\\
+\hspace{3mm} Aggravated assault 	 & 14 (17\%) & 10 (42\%) \\
+\hspace{3mm} Arson 	 & 9 (11\%) & 2 (8\%) \\
+\hspace{3mm} Manslaughter 	 & 16 (20\%) & 2 (8\%) \\
+\hspace{3mm} Moderately violent property crime 	 & 9 (11\%) & 3 (12\%) \\
+\hspace{3mm} Murder 	 & 10 (12\%) & 1 (4\%) \\
+\hspace{3mm} Sex offence 	 & 17 (21\%) & 1 (4\%) \\
+\hspace{3mm} Violent property crime 	 & 6 (7\%) & 5 (21\%) \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+The raw percentages suggest that patients with violent behavior after the second IFTE measurement were also more often violent before the first measurement and in between the two measurements.
+For the other variables there are no apparent differences between non-violent and violent patients.
+
+Next we examine the IFTE scores. 
 \autoref{fig:descriptives_scores_hist} shows a histogram of the raw scores across all IFTE items, raters, and patients.
 It is clear that some scores are given more often than others, such as 1, 2, 6, 10, and 14.
 Furthermore, it appears that, with the exception of 1, even scores are given more often than odd scores.
-
-
 \begin{figure}[!ht]
 	\centering
 	\includesvg[width=\textwidth]{descriptives_scores}
 	\caption{Histogram of observed scores across all patients, items, raters, and time points.}
 	\label{fig:descriptives_scores_hist}
 \end{figure}
-
-Not all raters rated every patient, in contrast, \autoref{fig:descriptives_raters_by_patients} shows that the rater by patient matrix is rather sparse.
+Given the amount of patients and raters it it is evident that not all raters can have scored all patients.
+\autoref{fig:descriptives_raters_by_patients} confirms this and shows that the rater by patient matrix is quite sparse.
 \begin{figure}[!ht]
 	\centering
 	\includesvg[width=\textwidth]{descriptives_raters_by_patients}
@@ -130,21 +185,23 @@ Not all raters rated every patient, in contrast, \autoref{fig:descriptives_rater
 	\label{fig:descriptives_raters_by_patients}
 \end{figure}
 
+
+
 \section{Cultural Consensus Theory}
 
-Cultural Consensus Theory, sometimes called ``test theory without an answer key'' \parencite{batchelder1988test}, is a method to discover the ''true answer`` for items from the consensus among the responses.
-For example, suppose a patient is scored by multiple raters on aggressiveness.
+Cultural Consensus Theory, sometimes called ``test theory without an answer key'' \parencite{batchelder1988test}, is a method to discover the ``true answer'' for items from the consensus among the responses.
+For example, suppose a patient is scored by multiple raters on hostile behavior.
 Multiple scores are obtained that need to be aggregated to arrive at a single score for this patient.
 The naive solution is to average these scores.
 However, as shown in \autoref{fig:misFitMean} averaging may lead to severely biased estimates.
 \begin{figure}[!ht]
 	\centering
 	\includesvg[width=\textwidth]{misfitMean}
-	\caption{True item scores (x-axis) versus the sample mean across raters (y-axis).}
+	\caption{True item scores ($x$-axis) versus the sample mean across raters ($y$-axis).}
 	\label{fig:misFitMean}
 \end{figure}
 The average score disregards all additional information that is available.
-It ignores the individual differences between raters, for example, this assumes that all psychiatrists score aggressiveness in the same way, and it ignores group differences among raters, for example, there is no difference in scores by psychiatrists as opposed to clinicians, or other staff member.
+It ignores the individual differences between raters, for example, this assumes that all psychiatrists score hostility in the same way, and it ignores group differences among raters, for example, there is no difference in scores by psychiatrists as opposed to clinicians, or other staff member.
 In addition, the average ignores any additional information about the patient at hand, such as offence and diagnosis.
 
 Cultural consensus theory provides a model-based framework for pooling information from multiple raters to form a consensus \parencite{anders2014cultural}.
@@ -206,7 +263,7 @@ P(\oneScore\mid \oneAppraisal,\bm{\Threshold}_{\Irater}) =
 \end{array} \right.
 \end{align*}
 where $\cdf{}$ is the logistic cumulative distribution function.\footnote{%
-	Note that this choice is arbitrary and that it is possibly to use any continuous cumulative distribution function.
+	The choice of distribution function is arbitrary, in principle it is possible to use any continuous cumulative distribution function.
 }
 
 Next, we explain how the latent appraisals and thresholds come about.
@@ -225,6 +282,10 @@ Second, we previously allowed the item difficulty parameter to vary across patie
 This parameter is mainly informed by the number or raters and there needs to be a sufficient amount of raters that score each patient for a reliable estimate.
 However, when simulating data with a ratio of raters to patients similar to that in the data at hand that we noticed that there are simply too few observations to reliably estimate the deviations in item difficulty across patients.
 Therefore, we only vary item difficulty across items and not across patients.
+
+Altogether, the LTM extracts a true score ($\ItemTruth_{\Ipatient\Irater}$) for each patient on every item while accounting for the hierarchical structure among patients, raters, and items.
+We consider these true values to be the basis on which all follow-up analyses should take place.%, such as evaluating the mental state of a patient or usage as a risk indicator.
+
 % \DB{We could also look at a patient specific ``cooperativeness'' parameter. Rather than doing $\ItemDifficulty_{\Ipatient\Iitem}$, which introduces $\Tpatient\times\Titem$ parameters, the logistic scale would become $\frac{\ItemDifficulty_\Iitem}{\RaterCompetence_\Irater \times\text{Cooperativeness}_\Ipatient}$. This introduces an additional $\Tpatient$ parameters.}
 
 
@@ -241,26 +302,14 @@ Therefore, we only vary item difficulty across items and not across patients.
 
 
 \subsection{Augmenting Logistic Regression with the LTM}
-In a next step, we use logistic regression for to predict violent behavior, where we use the results from the LTM as additional predictors.
-We do so in a fully Bayesian approach, that is, we constructed a joint model for the violent behavior and then patient ratings.%
+In a next step, we use logistic regression for to predict violent behavior, where we use the estimated true scores ($\ItemTruth_{\Ipatient\Irater}$) from the LTM as additional predictors.
+We do so in a fully Bayesian approach, that is, we constructed a joint model for the violent behavior and the patient ratings.%
 \footnote{%
 An alternative is to fit the LTM separately and then use e.g., the posterior means in a second step in a logistic regression.
 While this would be more computationally efficient, it would also ignore the uncertainty in the analysis of the patient ratings.
 }
 \autoref{model:Logistic_LTM} shows a graphical model of the logistic regression combined with the LTM.
 The latent truth for each patient on each item is seen as a covariate in the logistic regression model.
-
-\subsection{Implementation}
-We estimated the parameters of the LTM and the combined LTM -- Logistic regression using a Bayesian approach.
-To explore the posterior distributions of the model parameters we used Stan \parencite{CarpenterEtAl2017Stan}.
-Rather than Markov chain Monte Carlo (MCMC) we used variational inference, as variational inference was computationally fast while providing similar results in terms of parameter retrieval and model predictions \parencite{kucukelbir2017automatic}.
-All analyses were done using R \parencite{R} and Stan models were run using the R package \code{cmdstanr} \parencite{cmdstanr}.
-Code for the analyses is available in the online appendix at \githuburl{}.
-
-%with a logistic regression
-%In our application we are not directly interested in the results of the LTM, but rather, we wish to predict violent behavior
-%The CRM applies an information pooling strategy. Here, we use the results from the CRM, specifically the item truths for each patient, to augment prediction of aggressiveness.
-
 \begin{figure}[!ht]
 %	\begin{minipage}{0.5\textwidth}
 		\centering
@@ -280,9 +329,18 @@ Code for the analyses is available in the online appendix at \githuburl{}.
 %			\end{align*}
 %		}%
 %	\end{minipage}
-	\caption{Graphical model of Logistic Regression Augmented with the Latent Truth Rater Model.}
+	\caption{Graphical model of Logistic Regression Augmented with the Latent Truth Rater Model. The true scores }
 	\label{model:Logistic_LTM}
 \end{figure}
+In addition, we use the background variables $$ as predictors. 
+
+\subsection{Implementation}
+We estimated the parameters of the LTM and the combined LTM -- Logistic regression using a Bayesian approach.
+To explore the posterior distributions of the model parameters we used Stan \parencite{CarpenterEtAl2017Stan}.
+Rather than Markov chain Monte Carlo (MCMC) we used variational inference, as variational inference was computationally fast while providing similar results in terms of parameter retrieval and model predictions \parencite{kucukelbir2017automatic}.
+All analyses were done using R \parencite{R} and Stan models were run using the R package \code{cmdstanr} \parencite{cmdstanr}.
+Code for the analyses is available in the online appendix at \githuburl{}.
+
 
 % \iffalse
 % \subsection{Simulation Study}
@@ -382,22 +440,30 @@ An alternative approach to
 Hybrid is probably most predictive.
 
 \subsection{Suggestions for Future Data Collection}
-A limitation of the CCT approach applied here is that the use of unconstrained thresholds makes the model parameters hard to interpret.
-However, this modeling decision was mandated by the structure in the data, which, due to the large number of response categories, showed patterns that could not be described by a simpler function for the thresholds (e.g., a preference for even scores).
 
-Furthermore, the frequency of measurements is key to the usefulness of the IFTE scores.
-The scores' predictive value likely decreases with time.
+The interpretation of the parameters of the LTM in this application is hindered by the use of unconstrained thresholds.
+However, this modeling decision was mandated by the structure in the data, which, due to the large number of response categories, showed patterns that could not be described by a simpler function for the thresholds (e.g., a preference for even scores).
+For future data collection, it would we worthwhile to see to what extent the larger number of response options are necessary and to what extent some response categories can be collapsed.
+That would facilitate modeling of the data, but also reduce the likelihood of spurious patterns in the data.
+
+The frequency of measurements is key to the usefulness of the IFTE scores.
+It was previously found that the most recent measurement is most predictive \parencite{schuringa2019inpatient}, which indicates that the scores' predictive value likely decreases over time.
 Rather than scoring patients every 6 months, as in the data at hand, it would make more sense to rate them every few weeks.
 Although it may be practically difficult to score patients regularly, there are opportunities to use self-reports for this purpose \parencite{tuente2021mapping, bousardt2016predicting}.
+A downside of self-reports is that they may introduce additional variance due to the lack of standardized scoring, or meaningless responses in case of non-cooperation.
 
 \subsection{Limitations}
-A key limitation of our approach here is that patients' violent behavior is not a discrete event as we modeled it, but rather a continuous process where the risk of violent behavior changes over time.
+A limitation of our approach is that patients' violent behavior is not a discrete event as we modeled it, but rather a continuous process where the risk of violent behavior changes over time.
 This limits the direct applicability of our approach in practice.
 To accommodate time series data, the model could be be extended, for example, by adding autoregressive components.
 
-Furthermore, 
-
-The predictive comparison is possibly incomplete as  likely overfitting
+Furthermore, we did not account for the structure of the IFTE items.
+Each item of the IFTE is deigned to load on a particular factor, see \autoref{tb:IFTE_items}.
+This structure could be added to the model introduced here as a confirmatory factor model.
+This would imply that the true scores $\ItemTruth_{\Ipatient\Iitem}$ load on their common factors, and that the factor scores are used to predict violent behavior.
+If the factor model fits well then it could make the model interpretation easier, as this can then be done on the level of the factor rather than the items.
+However, it is unlikely that this would improve predictive performance.
+On the other hand, if the factor model does not fit well then predictive performance would suffer.
 
 \subsection{Conclusion}
 In sum, we applied the LTM introduced by \textcite{Anders2015cultural} and adapted previously by us in \textcite{vandenBergh2020cultural} to data of patients in a Forensic Psychiatric Center.
