--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18600,3 +18600,13 @@ pages = {352--362}
   year={2019},
   publisher={Elsevier}
 }
+
+@article{brier1950verification,
+  title={Verification of forecasts expressed in terms of probability},
+  author={Brier, Glenn W and others},
+  journal={Monthly weather review},
+  volume={78},
+  number={1},
+  pages={1--3},
+  year={1950}
+}
